--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,125 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple-Blog</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+    />
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      
-      {% block content %}
-          
-      {% endblock content %}
-          
-    </div>
-  </section>
+    <!--Navbar-->
+    <nav class="navbar is-info">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+          Simple-Blog
+        </a>
+        <div
+          class="navbar-burger burger"
+          data-target="navbarExampleTransparentExample"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div id="navbarExampleTransparentExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="/">
+            Home
+          </a>
+          <a class="navbar-item" href="/blog/">
+            Blog
+          </a>
+         
+          </div>
+        </div>
+      </div>
+    </nav>
+    <script type="text/javascript">
+      document.addEventListener("DOMContentLoaded", () => {
+        let navbarBurger = document.querySelector(".navbar-burger");
+        let navbarMenu = document.querySelector(".navbar-menu");
+        if (navbarBurger && navbarMenu) {
+          navbarBurger.addEventListener("click", function () {
+            navbarBurger.classList.toggle("is-active");
+            if (navbarBurger.classList.contains("is-active")) {
+              navbarMenu.style.display = "block";
+              if (navbarMenu.querySelectorAll("a[href]")) {
+                [].forEach.call(
+                  navbarMenu.querySelectorAll("a[href]"),
+                  function (navURL) {
+                    navURL.addEventListener("click", function () {
+                      navbarMenu.style.display = "none";
+                      navbarBurger.classList.remove("is-active");
+                    });
+                  }
+                );
+              }
+            } else navbarMenu.style.display = "none";
+          });
+        }
+        if (document.querySelectorAll(".navbar-dropdown")) {
+          [].forEach.call(
+            document.querySelectorAll(".navbar-dropdown"),
+            function (elDrop) {
+              elDrop.style.display = "none";
+            }
+          );
+        }
+        if (document.querySelectorAll(".navbar-link")) {
+          [].forEach.call(document.querySelectorAll(".navbar-link"), function (
+            elLink
+          ) {
+            if (elLink.classList.contains("is-active"))
+              elLink.classList.toggle("is-active");
+            if (
+              elLink.nextElementSibling.classList.contains("navbar-dropdown") &&
+              elLink.nextElementSibling.hasChildNodes()
+            ) {
+              elLink.addEventListener("click", function () {
+                elLink.classList.toggle("is-active");
+                if (
+                  elLink.classList.contains("is-active") &&
+                  elLink.nextElementSibling.style.display === "none"
+                )
+                  elLink.nextElementSibling.style.display = "block";
+                else if (
+                  !elLink.classList.contains("is-active") &&
+                  elLink.nextElementSibling.style.display === "block"
+                )
+                  elLink.nextElementSibling.style.display = "none";
+                [].forEach.call(elLink.nextElementSibling.childNodes, function (
+                  siblingChild
+                ) {
+                  siblingChild.addEventListener("click", function () {
+                    siblingChild.parentNode.style.display = "none";
+                    if (elLink.classList.contains("is-active"))
+                      elLink.classList.toggle("is-active");
+                  });
+                });
+              });
+              elLink.nextElementSibling.addEventListener(
+                "mouseleave",
+                function () {
+                  elLink.nextElementSibling.style.display = "none";
+                  if (elLink.classList.contains("is-active"))
+                    elLink.classList.toggle("is-active");
+                }
+              );
+            }
+          });
+        }
+      });
+    </script>
+    
+    <section class="section">
+      <br />
+      <div class="container">
+        {% block content %} {% endblock content %}
+      </div>
+    </section>
   </body>
 </html>
