change title size of the pages

--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<h1 class="is-size-1">Blog</h1>
 
-{% block content %}
-    <h1>Blog</h1>
-    
 {% endblock content %}
-    
