start with static files

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% load static %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple-Blog</title>
@@ -8,6 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %} " />
   </head>
   <body>
     <!--Navbar-->
@@ -38,82 +40,7 @@
         </div>
       </div>
     </nav>
-    <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", () => {
-        let navbarBurger = document.querySelector(".navbar-burger");
-        let navbarMenu = document.querySelector(".navbar-menu");
-        if (navbarBurger && navbarMenu) {
-          navbarBurger.addEventListener("click", function () {
-            navbarBurger.classList.toggle("is-active");
-            if (navbarBurger.classList.contains("is-active")) {
-              navbarMenu.style.display = "block";
-              if (navbarMenu.querySelectorAll("a[href]")) {
-                [].forEach.call(
-                  navbarMenu.querySelectorAll("a[href]"),
-                  function (navURL) {
-                    navURL.addEventListener("click", function () {
-                      navbarMenu.style.display = "none";
-                      navbarBurger.classList.remove("is-active");
-                    });
-                  }
-                );
-              }
-            } else navbarMenu.style.display = "none";
-          });
-        }
-        if (document.querySelectorAll(".navbar-dropdown")) {
-          [].forEach.call(
-            document.querySelectorAll(".navbar-dropdown"),
-            function (elDrop) {
-              elDrop.style.display = "none";
-            }
-          );
-        }
-        if (document.querySelectorAll(".navbar-link")) {
-          [].forEach.call(document.querySelectorAll(".navbar-link"), function (
-            elLink
-          ) {
-            if (elLink.classList.contains("is-active"))
-              elLink.classList.toggle("is-active");
-            if (
-              elLink.nextElementSibling.classList.contains("navbar-dropdown") &&
-              elLink.nextElementSibling.hasChildNodes()
-            ) {
-              elLink.addEventListener("click", function () {
-                elLink.classList.toggle("is-active");
-                if (
-                  elLink.classList.contains("is-active") &&
-                  elLink.nextElementSibling.style.display === "none"
-                )
-                  elLink.nextElementSibling.style.display = "block";
-                else if (
-                  !elLink.classList.contains("is-active") &&
-                  elLink.nextElementSibling.style.display === "block"
-                )
-                  elLink.nextElementSibling.style.display = "none";
-                [].forEach.call(elLink.nextElementSibling.childNodes, function (
-                  siblingChild
-                ) {
-                  siblingChild.addEventListener("click", function () {
-                    siblingChild.parentNode.style.display = "none";
-                    if (elLink.classList.contains("is-active"))
-                      elLink.classList.toggle("is-active");
-                  });
-                });
-              });
-              elLink.nextElementSibling.addEventListener(
-                "mouseleave",
-                function () {
-                  elLink.nextElementSibling.style.display = "none";
-                  if (elLink.classList.contains("is-active"))
-                    elLink.classList.toggle("is-active");
-                }
-              );
-            }
-          });
-        }
-      });
-    </script>
+    <script type="text/javascript" src="{% static 'js/navbar.js' %}"></script>
     
     <section class="section">
       <br />
