get ready for first release

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,5 +48,6 @@
         {% block content %} {% endblock content %}
       </div>
     </section>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   </body>
 </html>
