add customizable admin panel and imprint to simple-blog-django

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,14 @@
         {% block content %} {% endblock content %}
       </div>
     </section>
+    <footer class="footer" style="position: fixed; left: 0; bottom: 0; width: 100%; padding: 1rem;">
+  <div class="container hast-text-centered">
+    <p>
+      &copy; 2020 | <a href="/imprint/">Imprint</a> | <a href="/admin/">Login</a> 
+    </p>
+  </div>
+</footer>
+
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
   </body>
 </html>
