--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Simple-Blog</title>
+    <title>Chinablog</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
@@ -51,11 +51,11 @@
     <footer class="footer" style="position: fixed; left: 0; bottom: 0; width: 100%; padding: 1rem;">
   <div class="container hast-text-centered">
     <p>
-      &copy; 2020 | <a href="/imprint/">Imprint</a> | <a href="/admin/">Login</a> 
+      &copy; 2021 | Chinablog | <a href="/admin/">Login</a>
     </p>
   </div>
 </footer>
 
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+
   </body>
 </html>
